# lib/api-spec/openapi.yaml
@@ -271,8 +271,14 @@ components:
         email:
           type: string
           format: email
-        name:
-          type: string
+        birthMonth:
+          type: integer
+          minimum: 1
+          maximum: 12
+        birthDay:
+          type: integer
+          minimum: 1
+          maximum: 31
       required:
         - email
 
@@ -329,6 +335,12 @@ components:
           type: string
         name:
           type: string
+          nullable: true
+        birthMonth:
+          type: integer
+          nullable: true
+        birthDay:
+          type: integer
           nullable: true
         subscribedAt:
           type: string
